--- a/example.html
+++ b/example.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
 <title>Untitled Document</title>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-<script src="https://raw.github.com/artlawry/framify-jquery-plugin/master/framify.js"></script>
+<script src="framify.js"></script>
 <script>
 	$(function(){
 	
