Added checkbox and radio input change state support

--- a/example.html
+++ b/example.html
@@ -318,6 +318,12 @@ body {
         		<div class="column-content">
             		<h1>Contact</h1>
 	            	<form>
+	            		<label><input type="radio" name="radio" value="one" checked="checked" />One</label>
+	            		<label><input type="radio" name="radio" value="two" />Two</label>
+	            		<label><input type="radio" name="radio" value="three" />Three</label>
+	            		<label><input type="checkbox" name="checkbox" value="one" checked="checked" />One</label>
+	            		<label><input type="checkbox" name="checkbox" value="two" />Two</label>
+	            		<label><input type="checkbox" name="checkbox" value="three" />Three</label>
  	            		<label for="email">Email Address</label>
 	            		<input name="email-address" id="email-address" type="text" />
 	            		<label for="message">Message</label>
