Added video example with placeholder poster

--- a/example.html
+++ b/example.html
@@ -223,7 +223,7 @@ body {
 	<div id="grid">
     	<header id="head">
         	<div class="column-content">
-	        	<img src="http://placehold.it/900x200/808080/000" />
+	        	<img src="http://placehold.it/900x200/808080/000&text=Image" />
 	        	<nav>
 	        		<ul>
 	        			<li><a href="#">Navigation Link</a></li>
@@ -238,6 +238,12 @@ body {
         	</div>
         </header>
         <div id="body">
+        	<div id="video">
+        		<div class="column-content">
+					<video id="movie" preload="true" controls="true" poster="http://placehold.it/1920x1080/808080/000&text=Video">
+					</video>
+        		</div>
+        	</div>
         	<div id="blog">
             	<ol>
 		        	<li>
@@ -246,7 +252,7 @@ body {
 			                	<header>
 			                    	<h1>Entry Title</h1>
 			                    </header>
-			                    <img src="http://placehold.it/100x100/808080/000" />
+			                    <img src="http://placehold.it/100x100/808080/000&text=Image" />
 			                    <p>A summary or introductory paragraph for this entry.  Big enough to give an idea of the entry's content.  Small enough to remain unobtrusive.</p>
 			                    <a href="#">Full Article</a>
 			                </article>
@@ -258,7 +264,7 @@ body {
 			                	<header>
 			                    	<h1>Entry Title</h1>
 			                    </header>
-			                    <img src="http://placehold.it/100x100/808080/000" />
+			                    <img src="http://placehold.it/100x100/808080/000&text=Image" />
 			                    <p>A summary or introductory paragraph for this entry.  Big enough to give an idea of the entry's content.  Small enough to remain unobtrusive.</p>
 			                    <a href="#">Full Article</a>
 			                </article>
@@ -270,7 +276,7 @@ body {
 			                	<header>
 			                    	<h1>Entry Title</h1>
 			                    </header>
-			                    <img src="http://placehold.it/100x100/808080/000" />
+			                    <img src="http://placehold.it/100x100/808080/000&text=Image" />
 			                    <p>A summary or introductory paragraph for this entry.  Big enough to give an idea of the entry's content.  Small enough to remain unobtrusive.</p>
 			                    <a href="#">Full Article</a>
 			                </article>
@@ -282,7 +288,7 @@ body {
 			                	<header>
 			                    	<h1>Entry Title</h1>
 			                    </header>
-			                    <img src="http://placehold.it/100x100/808080/000" />
+			                    <img src="http://placehold.it/100x100/808080/000&text=Image" />
 			                    <p>A summary or introductory paragraph for this entry.  Big enough to give an idea of the entry's content.  Small enough to remain unobtrusive.</p>
 			                    <a href="#">Full Article</a>
 			                </article>
@@ -294,7 +300,7 @@ body {
 			                	<header>
 			                    	<h1>Entry Title</h1>
 			                    </header>
-			                    <img src="http://placehold.it/100x100/808080/000" />
+			                    <img src="http://placehold.it/100x100/808080/000&text=Image" />
 			                    <p>A summary or introductory paragraph for this entry.  Big enough to give an idea of the entry's content.  Small enough to remain unobtrusive.</p>
 			                    <a href="#">Full Article</a>
 			                </article>
@@ -306,7 +312,7 @@ body {
 			                	<header>
 			                    	<h1>Entry Title</h1>
 			                    </header>
-			                    <img src="http://placehold.it/100x100/808080/000" />
+			                    <img src="http://placehold.it/100x100/808080/000&text=Image" />
 			                    <p>A summary or introductory paragraph for this entry.  Big enough to give an idea of the entry's content.  Small enough to remain unobtrusive.</p>
 			                    <a href="#">Full Article</a>
 			                </article>
