Added toggle-class appearance css to example

--- a/example.html
+++ b/example.html
@@ -185,8 +185,10 @@ body {
 #foot {
   float: left;
   width: 100%; }
-  #foot table {
-    width: 100%; }
+  #foot div div {
+    padding: 1em; }
+    #foot div div table {
+      width: 100%; }
 
 .column-content {
   margin: 15px;
@@ -216,10 +218,24 @@ body {
   #body #blog ol li {
     float: left;
     width: 100%; } }
+/* Appearance
+------------------------------------------------------------*/
+.styled a {
+  color: red; }
+  .styled a:link, .styled a:visited, .styled a:hover, .styled a:active {
+    color: red; }
+.styled .column-content {
+  background-color: #ccc;
+  -webkit-border-radius: 10px;
+  -khtml-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  border-radius: 10px; }
 </style>
 </head>
 
-<body>
+<body class="styled">
 	<div id="grid">
     	<header id="head">
         	<div class="column-content">
@@ -341,60 +357,62 @@ body {
         </div>
         <footer id="foot">
         	<div class="column-content">
-        		<table>
-        			<caption>A Table</caption>
-        			<thead>
-        				<tr>
-        					<th>Column Header</th>
-        					<th>Column Header</th>
-        					<th>Column Header</th>
-        					<th>Column Header</th>
-        					<th>Column Header</th>
-        				</tr>
-        			</thead>
-        			<tbody>
-        				<tr>
-        					<th>Row Header</th>
-        					<td>Data Cell</td>
-        					<td>Data Cell</td>
-        					<td>Data Cell</td>
-        					<td>Data Cell</td>
-        				</tr>
-        				<tr>
-        					<th>Row Header</th>
-        					<td>Data Cell</td>
-        					<td>Data Cell</td>
-        					<td>Data Cell</td>
-        					<td>Data Cell</td>
-        				</tr>
-        				<tr>
-        					<th>Row Header</th>
-        					<td>Data Cell</td>
-        					<td>Data Cell</td>
-        					<td>Data Cell</td>
-        					<td>Data Cell</td>
-        				</tr>
-        				<tr>
-        					<th>Row Header</th>
-        					<td>Data Cell</td>
-        					<td>Data Cell</td>
-        					<td>Data Cell</td>
-        					<td>Data Cell</td>
-        				</tr>
-        				<tr>
-        					<th>Row Header</th>
-        					<td>Data Cell</td>
-        					<td>Data Cell</td>
-        					<td>Data Cell</td>
-        					<td>Data Cell</td>
-        				</tr>
-        			</tbody>
-        			<tfoot>
-        				<tr>
-        					<td colspan="5">Footer Cell</td>
-        				</tr>
-        			</tfoot>
-        		</table>
+        		<div>
+	        		<table>
+	        			<caption>A Table</caption>
+	        			<thead>
+	        				<tr>
+	        					<th>Column Header</th>
+	        					<th>Column Header</th>
+	        					<th>Column Header</th>
+	        					<th>Column Header</th>
+	        					<th>Column Header</th>
+	        				</tr>
+	        			</thead>
+	        			<tbody>
+	        				<tr>
+	        					<th>Row Header</th>
+	        					<td>Data Cell</td>
+	        					<td>Data Cell</td>
+	        					<td>Data Cell</td>
+	        					<td>Data Cell</td>
+	        				</tr>
+	        				<tr>
+	        					<th>Row Header</th>
+	        					<td>Data Cell</td>
+	        					<td>Data Cell</td>
+	        					<td>Data Cell</td>
+	        					<td>Data Cell</td>
+	        				</tr>
+	        				<tr>
+	        					<th>Row Header</th>
+	        					<td>Data Cell</td>
+	        					<td>Data Cell</td>
+	        					<td>Data Cell</td>
+	        					<td>Data Cell</td>
+	        				</tr>
+	        				<tr>
+	        					<th>Row Header</th>
+	        					<td>Data Cell</td>
+	        					<td>Data Cell</td>
+	        					<td>Data Cell</td>
+	        					<td>Data Cell</td>
+	        				</tr>
+	        				<tr>
+	        					<th>Row Header</th>
+	        					<td>Data Cell</td>
+	        					<td>Data Cell</td>
+	        					<td>Data Cell</td>
+	        					<td>Data Cell</td>
+	        				</tr>
+	        			</tbody>
+	        			<tfoot>
+	        				<tr>
+	        					<td colspan="5">Footer Cell</td>
+	        				</tr>
+	        			</tfoot>
+	        		</table>
+        		</div>
             </div>
         </footer>
         <div style="clear:both;">
